e2e/src/telemetry/snapshots/e2e__telemetry__logging__json_log_default_attrs-2.snap
---
source: e2e/src/telemetry/logging.rs
expression: http_end
---
{
  "duration_ms": "[duration_ms]",
  "headers": null,
  "level": "INFO",
  "message": "http request completed",
  "span": {
    "name": "request",
    "req_id": "[req_id]"
  },
  "status_code": 200,
  "timestamp": "[timestamp]"
}
