e2e/src/telemetry/snapshots/e2e__telemetry__logging__json_log_default_attrs-3.snap
---
source: e2e/src/telemetry/logging.rs
expression: gql_start
---
{
  "extensions": null,
  "level": "INFO",
  "message": "graphql request started",
  "operation_name": "",
  "span": {
    "name": "request",
    "req_id": "[req_id]"
  },
  "timestamp": "[timestamp]",
  "variables": null
}
