e2e/src/telemetry/snapshots/e2e__telemetry__logging__json_log_default_attrs-4.snap
---
source: e2e/src/telemetry/logging.rs
expression: gql_end
---
{
  "error_count": 0,
  "level": "INFO",
  "message": "graphql request completed",
  "span": {
    "name": "request",
    "req_id": "[req_id]"
  },
  "timestamp": "[timestamp]"
}
