e2e/src/telemetry/snapshots/e2e__telemetry__logging__json_log_default_attrs-6.snap
---
source: e2e/src/telemetry/logging.rs
expression: subgraph_end
---
{
  "level": "INFO",
  "message": "subgraph request completed",
  "span": {
    "name": "request",
    "req_id": "[req_id]"
  },
  "subgraph": "accounts",
  "timestamp": "[timestamp]"
}
