e2e/src/telemetry/snapshots/e2e__telemetry__logging__json_log_default_attrs.snap
---
source: e2e/src/telemetry/logging.rs
expression: http_start
---
{
  "headers": {
    "accept": "application/graphql-response+json",
    "user-agent": null
  },
  "level": "INFO",
  "message": "http request started",
  "method": "POST",
  "path": "/graphql",
  "span": {
    "name": "request",
    "req_id": "[req_id]"
  },
  "timestamp": "[timestamp]"
}
